*7554* fix sprite alignment for new review rounds

--- a/styles/sprites.less
+++ b/styles/sprites.less
@@ -86,8 +86,8 @@ a.sprite {
 	&.resubmit:before { margin-right:4px; background-position: -720px 0; }
 	&.resubmit:hover:before { background-position: -720px -24px; }
 
-	&.add_item_small:before { height: 18px; margin-right:4px; background-position: -744px 0; }
-	&.add_item_small:hover:before { background-position: -744px -24px; }
+	&.add_item_small:before { height: 15px; margin-right:4px; background-position: -744px -4px; }
+	&.add_item_small:hover:before { background-position: -744px -28px; }
 
 	&.enroll_user:before { margin-right:4px; background-position: -768px 0; }
 	&.enroll_user:hover:before { background-position: -768px -24px; }
